Rename PushAttributes' methods.